--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Configure Google Cloud SDK
-        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
         with:
           project_id: YOUR_PROJECT_ID
           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
