--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
       with:
         project_id: ${{ env.PROJECT_ID }}
         service_account_email: ${{ secrets.GCP_SA_EMAIL }}
@@ -34,7 +34,7 @@ jobs:
         docker push gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
 
     - name: Deploy to Cloud Run
-      uses: GoogleCloudPlatform/github-actions/deploy-cloudrun@master
+      uses: GoogleCloudPlatform/github-actions/deploy-cloudrun@main
       with:
         service_name: ${{ env.SERVICE_NAME }}
         image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
